--- a/ARMap/Info.plist
+++ b/ARMap/Info.plist
@@ -41,6 +41,10 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string></string>
+	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string></string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
